--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "hello-react",
   "version": "1.0.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Streed12/helloReact.git"
+  },
   "description": "simple react app",
   "main": "index.js",
   "scripts": {
@@ -9,6 +13,8 @@
   "author": "Steven Reed",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
   }
 }
